--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.8'
 services:
   # Service de base de données commun à tous les profils
   db:
+    profiles:
+      - dev
+      - test
     image: postgres:15
     environment:
       POSTGRES_USER: user
@@ -33,8 +36,7 @@ services:
     depends_on:
       - db
     volumes:
-      - .:/app
-    command: npm run dev
+        - ./src:/app/src
 
   # Service de l'application pour les tests
   app_test:
@@ -52,28 +54,21 @@ services:
       ACCESS_TOKEN_SECRET: votre-clé-secrète
     depends_on:
       - db
-    command: npm test
 
 
   # Service de l'application pour la production
   app_prod:
     profiles:
       - prod
+    image: back-projet-web-s7-app_prod:latest
     build:
       context: .
       dockerfile: Dockerfile.prod
     environment:
       NODE_ENV: production
-      DB_HOST: db
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_NAME: database
-      SERVER_PORT: 8000
-      ACCESS_TOKEN_SECRET: votre-clé-secrète
+      DATABASE_URL: "postgres://udl3ogjs2n78bk:p83419240df68aef4031551b8a839fd7cd79a7ccabedca3856482890544d6674f@cf9gid2f6uallg.cluster-czrs8kj4isg7.us-east-1.rds.amazonaws.com:5432/ddnfreibk0vunq"
     ports:
       - "8000:8000"
-    depends_on:
-      - db
     command: node dist/index.js
 
 
