--- a/package.json
+++ b/package.json
@@ -5,18 +5,30 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "jest --passWithNoTests --detectOpenHandles -- main.test.ts",
+    "docker:dev": "docker-compose --profile dev build --no-cache && docker-compose --profile dev up",
+    "test": "docker-compose --profile test up --build --exit-code-from app_test",
+    "test:internal": "jest --passWithNoTests --detectOpenHandles main.test.ts",
     "build": "tsc",
     "docker:up": "docker-compose up --build",
     "docker:down": "docker-compose down",
-    "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "migrate": "sequelize db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
+    "prod": "node dist/index.js",
+    "docker:prod": "docker-compose --profile prod build --no-cache && docker-compose --profile prod up",
+    "start": "node dist/index.js",
+    "postinstall": "tsc",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jridgewell/trace-mapping": "^0.3.25",
+    "@sequelize/core": "^7.0.0-alpha.43",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/express-validator": "^3.0.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,19 +38,19 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
-    "pg": "^8.13.0",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.0",
     "sequelize-typescript": "^2.1.6",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^5.0.0",
-    "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.9.0",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.10.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
@@ -59,5 +71,8 @@
     "testMatch": [
       "**/__tests__/**/*.test.ts"
     ]
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
