--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "typeRoots": ["node_modules/@types", "types"],
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "types": ["node", "jest", "supertest"],
+    "types": ["jest", "node","supertest"]
   },
   "include": ["src/**/*", "types/**/*"],
   "exclude": ["node_modules"]
