--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,16 +5,17 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Copier les fichiers de configuration
-COPY package*.json tsconfig.json ./
+# Copier d'abord les fichiers de dépendances
+COPY package*.json ./
+COPY tsconfig.json ./
 
-# Installer toutes les dépendances (dev incluses)
-RUN npm install
+# Installer toutes les dépendances
+RUN npm ci
 
-# Copier le code source
-COPY . .
+# Copier le reste des sources
+COPY src/ ./src/
 
-# Build l'application
+# Build
 RUN npm run build
 
 # Étape 2 : Production
@@ -22,13 +23,12 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Copier package.json et installer uniquement les dépendances de production
+# Copier les fichiers nécessaires
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm ci --only=production
 
-# Copier les fichiers compilés depuis l'étape de build
+# Copier les fichiers buildés
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/config ./config
 
 # Variables d'environnement
 ENV NODE_ENV=production
@@ -36,5 +36,4 @@ ENV PORT=8000
 
 EXPOSE 8000
 
-# Démarrer l'application
-CMD ["npm", "start"]
+CMD ["node", "dist/index.js"]
