--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,6 @@ jobs:
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         run: |
-          heroku container:push web -a back-projet-web-s7
+          docker build -t registry.heroku.com/back-projet-web-s7/web -f Dockerfile.prod .
+          docker push registry.heroku.com/back-projet-web-s7/web
           heroku container:release web -a back-projet-web-s7
