--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,19 +5,25 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+# Installer les dépendances nécessaires pour bcrypt
+RUN apk add --no-cache python3 make g++
+
 # Copier tous les fichiers nécessaires pour le build
 COPY package*.json ./
 COPY tsconfig.json ./
 COPY src/ ./src/
 
 # Installer les dépendances et build
-RUN npm ci --ignore-scripts && \
+RUN npm ci && \
     npm run build
 
 # Étape de production
 FROM node:18-alpine
 
 WORKDIR /app
+
+# Installer les dépendances nécessaires pour bcrypt
+RUN apk add --no-cache python3 make g++
 
 # Copier package.json et installer les dépendances de production
 COPY package*.json ./
@@ -31,5 +37,8 @@ ENV NODE_ENV=production
 ENV PORT=8000
 
 EXPOSE 8000
+
+# Recompiler bcrypt pour la plateforme actuelle
+RUN cd /app && npm rebuild bcrypt --build-from-source
 
 CMD ["node", "dist/index.js"]
