--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "docker:prod": "docker-compose --profile prod build --no-cache && docker-compose --profile prod up",
     "start": "node dist/index.js",
     "postinstall": "tsc",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "setup-db": "ts-node scripts/setupDatabase.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,10 +33,12 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "pg": "^8.13.1",
@@ -44,13 +47,14 @@
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.0",
     "sequelize-typescript": "^2.1.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.1",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
