--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node dist/index.js",
     "postinstall": "tsc",
     "heroku-postbuild": "npm run build",
-    "setup-db": "ts-node scripts/setupDatabase.ts"
+    "setup-db": "node dist/scripts/setupDatabase.js"
   },
   "keywords": [],
   "author": "",
