--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,6 +5,9 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+ARG CACHEBUST=1
+RUN echo "Cache bust: $CACHEBUST"
+
 # Installer les dépendances nécessaires pour bcrypt
 RUN apk add --no-cache python3 make g++
 
