--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,9 +5,6 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-ARG CACHEBUST=1
-RUN echo "Cache bust: $CACHEBUST"
-
 # Installer les dépendances nécessaires pour bcrypt
 RUN apk add --no-cache python3 make g++
 
@@ -17,6 +14,7 @@ COPY tsconfig.json ./
 COPY src/ ./src/
 
 # Installer les dépendances et build
+RUN rm -rf dist/
 RUN npm ci && \
     npm run build
 
